src/test/ui/parser/issue-81804.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-81804.rs:9:9
   |
LL | fn main() {}
   |           -- block is empty, you might have not meant to close it
LL |
LL | fn p([=(}
   |         ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |     -- -  ^
   |     || |
   |     || unclosed delimiter
   |     |unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |     -- -  ^
   |     || |
   |     || unclosed delimiter
   |     |unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |     -- -  ^
   |     || |
   |     || unclosed delimiter
   |     |unclosed delimiter
   |     unclosed delimiter

error: expected pattern, found `=`
  --> $DIR/issue-81804.rs:9:7
   |
LL | fn p([=(}
   |       ^ expected pattern

error: expected one of `)`, `,`, `->`, `where`, or `{`, found `]`
  --> $DIR/issue-81804.rs:9:11
   |
LL | fn p([=(}
   |           ^ expected one of `)`, `,`, `->`, `where`, or `{`

error: aborting due to 6 previous errors

